Updated to ruby 2.3.1 and all packages. Added Vagrantfile for development using Vagrant

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@
 .idea
 /config/database.yml
 
+#Ignore vagrant related files
+.vagrant
+ubuntu-xenial-16.04-cloudimg-console.log
+
 .DS_Store
 /vendor
 /coverage
